# bms4-cpp

./: CMakeLists.txt  README.md
device/: STM32F051K8TX_FLASH.ld
inc/STM32LIB/: STM32F0x1.hpp  STM32F0x1_ADC.hpp  STM32F0x1_CAN.hpp  STM32F0x1_CEC.hpp  STM32F0x1_CRC.hpp  STM32F0x1_CRS.hpp  STM32F0x1_DAC.hpp  STM32F0x1_DBGMCU.hpp  STM32F0x1_DMA1.hpp  STM32F0x1_DMA2.hpp  STM32F0x1_EXTI.hpp  STM32F0x1_Flash.hpp  STM32F0x1_GPIOA.hpp  STM32F0x1_GPIOB.hpp  STM32F0x1_GPIOC.hpp  STM32F0x1_GPIOD.hpp  STM32F0x1_GPIOE.hpp  STM32F0x1_GPIOF.hpp  STM32F0x1_I2C1.hpp  STM32F0x1_I2C2.hpp  STM32F0x1_IWDG.hpp  STM32F0x1_NVIC.hpp  STM32F0x1_PWR.hpp  STM32F0x1_RCC.hpp  STM32F0x1_RTC.hpp  STM32F0x1_SCB.hpp  STM32F0x1_SPI1.hpp  STM32F0x1_SPI2.hpp  STM32F0x1_STK.hpp  STM32F0x1_SYSCFG_COMP.hpp  STM32F0x1_TIM1.hpp  STM32F0x1_TIM14.hpp  STM32F0x1_TIM15.hpp  STM32F0x1_TIM16.hpp  STM32F0x1_TIM17.hpp  STM32F0x1_TIM2.hpp  STM32F0x1_TIM3.hpp  STM32F0x1_TIM6.hpp  STM32F0x1_TIM7.hpp  STM32F0x1_TSC.hpp  (+10 more)
src/: main.cpp
